# brick_bird

./: Cargo.toml  LICENSE.txt  README.md  brick_bird.js  index.html  script.js  style.css
scripts/: fd_release-build.sh  fd_release-copy_execs.sh
src/: color.rs  lib.rs  main.rs  misc.rs  simul.rs  ui.rs
src/misc/: keybinds.rs  sect_pass.rs
src/simul/: camera.rs  emotions.rs  finish.rs  hero.rs  motion.rs  observator.rs  obstacles.rs  plane.rs  start.rs  state.rs
src/simul/hero/: bundles.rs  res.rs  sys.rs
src/simul/hero/sys/: collide.rs
src/simul/motion/: compos.rs  res.rs  sys.rs
src/simul/observator/: bundles.rs  sys.rs
src/simul/obstacles/: pole.rs
src/simul/plane/: res.rs  sector.rs  sys.rs
src/simul/plane/res/: plane.rs
src/simul/plane/res/plane/: err.rs
src/simul/plane/sector/: entity_data.rs  err.rs
src/simul/state/: states.rs
src/ui/: simul_overlay.rs
src/ui/simul_overlay/: bundles.rs
src/ui/simul_overlay/bundles/: motion_scale_disp.rs  passed_sect_count_disp.rs
