[package]
name = "game"
version = "0.1.0"
edition = "2021"

[lib]
name = "fly_b"

[[bin]]
name = "brick_bird"
path = "./src/main.rs"

[dependencies]
# Vital implementations
bevy = { version = "0.13", default-features = false, features = [ "bevy_winit", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "x11", "webgl2", "mp3" ] }
# I might won't to use these bevy features in near future: "bevy_gilrs", "default_font", 
# Disabled default bevy features:                        	 "animation", "bevy_scene", "bevy_gltf", "bevy_pbr", "hdr", "png", "vorbis", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "bevy_debug_stepping" 
#All defaults: bevy = { version = "0.13", default-features = false, features = ["animation", "bevy_asset", "bevy_audio", "bevy_gilrs", "bevy_scene", "bevy_winit", "bevy_core_pipeline", "bevy_pbr", "bevy_gltf", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "png", "hdr", "vorbis", "x11", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "default_font", "webgl2", "bevy_debug_stepping"] }
rand = "0.8.5"
# Conveniences
derive_more = "0.99.17"
tap = "1.0.1"
thiserror = "1.0.57"
# Enriching logic
num_enum = "0.7.2"
# Not needed anymore
#bevy-inspector-egui = "0.20.0"
#num-bigint = "0.4.4"
