[package]
name = "game"
authors = ["Tomasz Nehring"]
version = "1.2.0"
edition = "2021"

[features]
dlink = ["bevy/dynamic_linking"]

[lib]
name = "fly_b"

[[bin]]
name = "brick_bird"
path = "./src/main.rs"

[dependencies]
# Vital implementations
bevy = { version = "0.13", default-features = false, features = [ "bevy_winit", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "x11", "webgl2", "mp3" ] }
# I might want to use these bevy features in near future: "bevy_gilrs", "default_font", 
# Disabled default bevy features:                        	 "animation", "bevy_scene", "bevy_gltf", "bevy_pbr", "hdr", "png", "vorbis", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "bevy_debug_stepping" 
rand = "0.8.5"
# Conveniences
derive_more = "0.99.17"
tap = "1.0.1"
thiserror = "1.0.57"
# Enriching logic
num_enum = "0.7.2"
