[package]
# About
name = "game"
description = "A colorful Flappy Bird clone written in Rust. Cross platform. Has own physic engine. Parallel."
authors = ["Tomasz Nehring"]
# Versions
version = "1.2.0"
edition = "2021"
# Pages
homepage = "https://github.com/Siiir/brick_bird/"
repository = "https://github.com/Siiir/brick_bird/"
license-file = "./LICENSE.txt"

[features]
dlink = ["bevy/dynamic_linking"]

[lib]
name = "fly_b"

[[bin]]
name = "brick_bird"
path = "./src/main.rs"

[dependencies]
# Vital implementations
bevy = { version = "0.13", default-features = false, features = [ "bevy_winit", "bevy_asset", "bevy_audio", "bevy_core_pipeline", "bevy_render", "bevy_sprite", "bevy_text", "bevy_ui", "multi-threaded", "x11", "webgl2", "mp3" ] }
# I might want to use these bevy features in near future: "bevy_gilrs", "default_font", 
# Disabled default bevy features:                        	 "animation", "bevy_scene", "bevy_gltf", "bevy_pbr", "hdr", "png", "vorbis", "bevy_gizmos", "android_shared_stdcxx", "tonemapping_luts", "bevy_debug_stepping" 
rand = "0.8.5"
# Conveniences
derive_more = "0.99.17"
tap = "1.0.1"
thiserror = "1.0.57"
# Enriching logic
num_enum = "0.7.2"

# Optimizing game crate
[profile.dev.package.game]
opt-level = 1
# Optimizing bevy libraries
[profile.dev.package.bevy]
opt-level = 3

[profile.fd_release]
inherits = "release"
opt-level = 3
debug = false
strip = "none"
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[profile.fw_release]
inherits = "release"
opt-level = "s"
debug = false
strip = true
lto = true
codegen-units = 1
incremental = false
panic = "abort"

[profile.fast_d_comp]
inherits = "dev"
opt-level = 0
debug = 0
strip = "none"
lto = false
codegen-units = 256
incremental = true
